--- a/apache/sample.conf
+++ b/apache/sample.conf
@@ -1,4 +1,4 @@
-<VirtualHost *>
+<VirtualHost *:80>
   ServerName phtc.ccnmtl.columbia.edu
   ServerAdmin ccnmtl-sysadmin@columbia.edu
   CustomLog /var/log/apache2/phtc/access.log combined
@@ -6,7 +6,7 @@
 
   SetEnv DJANGO_SETTINGS_MODULE phtc.settings_production
 
-  WSGIDaemonProcess site-phtc user=pusher group=pusher threads=5 python-path=/var/www/phtc/phtc/ve/lib/python2.5/site-packages
+  WSGIDaemonProcess site-phtc user=pusher group=pusher threads=5 python-path=/var/www/phtc/phtc/ve/lib/python2.6/site-packages
   WSGIProcessGroup site-phtc
   WSGIReloadMechanism Process
 
@@ -28,8 +28,8 @@
     AddOutputFilterByType DEFLATE text/css application/x-javascript
   </Directory>
 
-  Alias /media/ /var/www/phtc/phtc/ve/lib/python2.5/site-packages/django/contrib/admin/media/
-  <Directory /var/www/phtc/phtc/ve/lib/python2.5/site-packages/django/contrib/admin/media/>
+  Alias /media/ /var/www/phtc/phtc/ve/lib/python2.6/site-packages/django/contrib/admin/media/
+  <Directory /var/www/phtc/phtc/ve/lib/python2.6/site-packages/django/contrib/admin/media/>
     Order deny,allow
     Allow from all
     FileETag None
