--- a/apache/sample.conf
+++ b/apache/sample.conf
@@ -1,5 +1,5 @@
 <VirtualHost *:80>
-  ServerName phtc.ccnmtl.columbia.edu
+  ServerName training.lowernysphtc.org
   ServerAdmin ccnmtl-sysadmin@columbia.edu
   CustomLog /var/log/apache2/phtc/access.log combined
   ErrorLog /var/log/apache2/phtc/error.log
