--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,7 @@ ipython==0.13.2
 ipdb==0.7
 sure==1.2.2
 fuzzywuzzy==0.2
+cssselect==0.8
 lettuce==0.2.14
 rdflib==3.1.0
 selenium==2.35.0
@@ -52,7 +53,7 @@ django-treebeard==1.61
 django-pagetree==0.11.2
 django-pageblocks==0.5.9
 django-pagetree_export==0.3
-django-registration==0.8
+django-registration==1.0
 django-debug-toolbar==0.9.4
 django-smartif==0.1
 django-jenkins==0.14.0
