--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-Django==1.4.8
+Django==1.5.1
 httplib2==0.8
 restclient==0.11.0
 feedparser==4.1
@@ -49,11 +49,12 @@ django_compressor==1.1.1
 django-statsd-mozilla==0.3.9
 raven==0.7.0
 django-bootstrap-form==2.0.3
-django-treebeard==1.61
-django-pagetree==0.11.2
-django-pageblocks==0.5.9
+django-treebeard==2.0b2
+django-pagetree==0.13.4
+django-pageblocks==0.5.11
+django-markwhat==1.0
 django-pagetree_export==0.3
-django-registration==0.8
+django-registration==1.0
 django-debug-toolbar==0.9.4
 django-smartif==0.1
 django-jenkins==0.14.0
