--- a/requirements.txt
+++ b/requirements.txt
@@ -37,6 +37,7 @@ sorl==3.1
 tagging==0.3-pre
 typogrify==2.0.0
 django-appconf==0.4.1
+django-munin==0.1.1
 django-staticmedia==0.2.2
 django-indexer==0.3.0
 django-templatetag-sugar==0.1
