--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 Django==1.7.7
-feedparser==4.1
+feedparser==5.1.3
 Markdown==2.6.1
 pyenchant==1.5.1
 simplejson==3.4.0
@@ -8,27 +8,28 @@ uuid==1.30
 psycopg2==2.5.4
 Pillow==2.7.0
 nose==1.3.4
-versiontools==1.8.2
+versiontools==1.9.1
 statsd==3.0.1
 mccabe==0.2.1
-flake8==2.0
+flake8==2.2.5
 lxml==3.2.3
-ipython==0.13.2
-ipdb==0.7
-sure==1.2.2
-fuzzywuzzy==0.2
+ipython==3.0.0
+ipdb==0.8
+sure==1.2.7
+fuzzywuzzy==0.4.0
 cssselect==0.8
-rdflib==3.1.0
+rdflib==4.1.2
 selenium==2.45.0
 coverage==3.7.1
 unittest2==0.5.1
 logilab-common==0.59.0
 logilab-astng==0.24.1
 pylint==1.4.1
-pep8==1.4.6
-pyflakes==0.7.3
-python-ldap==2.4.13
-sqlparse==0.1.11
+pep8==1.5.7
+pyflakes==0.8.1
+python-ldap==2.4.18
+sqlparse==0.1.14
+six==1.9.0
 
 djangowind==0.13.2
 sorl==3.1
@@ -49,7 +50,7 @@ django-treebeard==2.0b2
 django-pagetree== 1.0.1
 django-pageblocks==1.0.0
 django-markwhat==2014.9.20
-django-pagetree_export==0.3
+django-pagetree_export==0.4
 django-registration-redux==1.1
 django-smartif==0.1
 django-jenkins==0.16.3
