--- a/requirements.txt
+++ b/requirements.txt
@@ -44,7 +44,8 @@ django-nose==1.3
 django_compressor==1.4
 django-statsd-mozilla==0.3.14
 raven==5.2.0
-django-bootstrap-form==2.0.3
+django-bootstrap3==5.1.1
+django-bootstrap-form==3.1.0
 django-debug-toolbar==1.1
 django-treebeard==2.0b2
 django-pagetree== 1.0.1
