--- a/requirements.txt
+++ b/requirements.txt
@@ -41,7 +41,7 @@ django-templatetag-sugar==0.1
 django-paging==0.2.5
 django-annoying==0.8.0
 django-nose==1.3
-django_compressor==1.4
+django-compressor==1.5
 django-statsd-mozilla==0.3.14
 raven==5.2.0
 django-bootstrap-form==2.0.3
