--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ django-statsd-mozilla==0.3.14
 raven==5.2.0
 django-bootstrap-form==2.0.3
 django-debug-toolbar==1.1
-django-treebeard==2.0b2
+django-treebeard==2.0
 django-pagetree== 1.0.1
 django-pageblocks==1.0.0
 django-markwhat==2014.9.20
