--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,9 @@ pyflakes==0.8.1
 python-ldap==2.4.19
 sqlparse==0.1.14
 six==1.9.0
+pyasn1==0.1.8
+pyOpenSSL==0.15.1
+ndg-httpsclient==0.4.0
 
 djangowind==0.13.3
 sorl==3.1
