:arrow_up: ipython 4.0.0. PMT #101251

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,8 +12,15 @@ statsd==3.1
 mccabe==0.3.1
 flake8==2.2.5
 lxml==3.4.4
-ipython==3.0.0
 ipdb==0.8.1
+traitlets==4.0.0
+ipython_genutils==0.1.0
+decorator==4.0.2
+pexpect==3.3
+pickleshare==0.5
+simplegeneric==0.8.1
+path.py==8.1.1
+ipython==4.0.0
 sure==1.2.12
 fuzzywuzzy==0.6.0
 cssselect==0.9.1
