convert to ccnmtlsettings

--- a/requirements.txt
+++ b/requirements.txt
@@ -64,3 +64,9 @@ django-smartif==0.1
 django-jenkins==0.17.0
 django-stagingcontext==0.1.0
 django-smoketest==0.3.0
+gunicorn==19.3.0
+django-impersonate==0.9.1
+django-waffle==0.10.1
+django-ga-context==0.1.0
+
+ccnmtlsettings==0.1.0
