--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,8 @@ tagging==0.3-pre
 typogrify==2.0.7
 raven==5.10.1
 contextlib2==0.5.1
+rcssmin==1.0.6
+rjsmin==1.0.12
 
 django-appconf==1.0.1
 django-indexer==0.3.0
