--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,8 @@ Pillow==3.2.0
 versiontools==1.9.1
 statsd==3.2.1
 mccabe==0.5.0
-flake8==2.5.4
+pycodestyle==2.0.0
+flake8==2.6.0
 lxml==3.6.0
 ipdb==0.10.0
 traitlets==4.2.1
