:arrow_up: flake8 3.0.2

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,9 @@ versiontools==1.9.1
 statsd==3.2.1
 mccabe==0.5.0
 pycodestyle==2.0.0
-flake8==2.6.2
+enum34==1.1.6
+configparser==3.5.0
+flake8==3.0.2
 lxml==3.6.1
 ipdb==0.10.1
 traitlets==4.2.2
