--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 --index-url https://pypi.ccnmtl.columbia.edu/
-Django==1.10.7
+Django==1.11
 feedparser==5.2.1
 Markdown==2.6.8
 pyenchant==1.6.7
@@ -53,6 +53,7 @@ rcssmin==1.0.6
 rjsmin==1.0.12
 Jinja2==2.9.6
 MarkupSafe==1.0
+pytz==2017.2
 
 django-appconf==1.0.2
 django-indexer==0.3.0
