--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
---index-url https://pypi.ccnmtl.columbia.edu/
 Django==1.11.2
 feedparser==5.2.1
 Markdown==2.6.8
@@ -45,7 +44,7 @@ pyasn1==0.2.3
 pyOpenSSL==17.0.0
 ndg-httpsclient==0.4.2
 djangowind==1.0.0
-sorl==3.1
+requirements/src/sorl-3.1.tar.gz
 typogrify==2.0.7
 raven==6.1.0
 contextlib2==0.5.5
@@ -71,8 +70,8 @@ django-debug-toolbar==1.8
 django-treebeard==4.1.1
 django-pagetree==1.3.2
 django-markwhat==1.5.1
-django-pageblocks==1.0.4
-django-pagetree_export==0.4
+django-pageblocks==1.1.0
+requirements/src/django-pagetree_export-0.4.tar.gz
 django-jenkins==0.110.0
 django-stagingcontext==0.1.0
 django-smoketest==1.0.0
