--- a/requirements.txt
+++ b/requirements.txt
@@ -33,7 +33,7 @@ unittest2==1.1.0
 logilab-common==1.4.2
 logilab-astng==0.24.3
 editdistance==0.4
-pylint==2.0.0
+pylint==1.9.2 # pyup: <2.0.0
 pep8==1.7.1
 pyflakes==2.0.0
 ldap3==2.5
