--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,7 @@ Pillow==5.3.0
 versiontools==1.9.1
 statsd==3.3.0
 mccabe==0.6.1
-pycodestyle==2.3.1 # pyup: <2.4.0
+pycodestyle==2.4.0
 enum34==1.1.6
 configparser==3.5.0
 flake8==3.6.0
