--- a/requirements.txt
+++ b/requirements.txt
@@ -43,7 +43,7 @@ pyasn1==0.4.4
 pyOpenSSL==18.0.0
 ndg-httpsclient==0.5.1
 djangowind==1.2.1
-requirements/src/sorl-3.1.tar.gz
+requirements/src/sorl-3.2ctl-py2.py3-none-any.whl
 typogrify==2.0.7
 raven==6.9.0
 contextlib2==0.5.5
